# dotfiles-config

./: .coverage  Makefile  README.md  pyproject.toml
assets/wallpapers/: README.md  manage_wallpapers.sh
config-files/nvim/: init.lua
config-files/zsh/: .zshrc.j2
docs/: index.md
docs/.archive/: DOCS_REQUIREMENTS.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  REPOSITORY_DOCS_REQUIREMENTS.md  TEST_INTEGRATION_SUMMARY.md  VALIDATION.md  docs-update-plan.md
docs/architecture/: cli-structure.md  design-principles.md  directory-layout.md  index.md  integration-points.md  (+1 more)
dotfiles-icon-templates/: README.md  pyproject.toml
dotfiles-icon-templates/src/dotfiles_icon_templates/: __init__.py  constants.py
dotfiles-icon-templates/src/dotfiles_icon_templates/api/: __init__.py  icon_templates.py
dotfiles-icon-templates/src/dotfiles_icon_templates/cli/: __init__.py
dotfiles-icon-templates/src/dotfiles_icon_templates/cli/commands/: __init__.py  copy.py  list.py  show.py
dotfiles-icon-templates/src/dotfiles_icon_templates/services/: __init__.py  icon_templates_service.py
dotfiles-icon-templates/tests/integration/: test_icon_templates_cli.py
dotfiles-icon-templates/tests/unit/: test_icon_templates_api.py  test_icon_templates_service.py
dotfiles-packages/: README.md  pyproject.toml
dotfiles-packages/ansible/playbooks/roles/base/zsh/defaults/: main.yml
dotfiles-packages/ansible/playbooks/roles/features/color-scheme-generator/defaults/: main.yml
dotfiles-packages/ansible/playbooks/roles/features/wallpaper-effects-generator/tasks/: main.yml
dotfiles-packages/ansible/playbooks/roles/features/wallpaper-effects-generator/vars/: main.yml
dotfiles-packages/src/dotfiles_packages/: __init__.py
dotfiles-packages/src/dotfiles_packages/api/: __init__.py  packages.py
dotfiles-packages/src/dotfiles_packages/cli/: __init__.py
dotfiles-packages/src/dotfiles_packages/cli/commands/: __init__.py  install.py  list.py
dotfiles-packages/src/dotfiles_packages/services/: __init__.py  packages_service.py
dotfiles-packages/tests/integration/: test_packages_cli.py
dotfiles-packages/tests/unit/: test_packages_api.py  test_packages_service.py
dotfiles-wallpapers/: README.md  pyproject.toml
dotfiles-wallpapers/src/dotfiles_wallpapers/: __init__.py  constants.py
dotfiles-wallpapers/src/dotfiles_wallpapers/api/: __init__.py  wallpapers.py
dotfiles-wallpapers/src/dotfiles_wallpapers/cli/: __init__.py
dotfiles-wallpapers/src/dotfiles_wallpapers/cli/commands/: __init__.py  add.py  extract.py  list.py
dotfiles-wallpapers/src/dotfiles_wallpapers/services/: __init__.py  wallpapers_service.py
dotfiles-wallpapers/tests/integration/: test_wallpapers_cli.py
dotfiles-wallpapers/tests/unit/: test_wallpapers_api.py  test_wallpapers_service.py
src/: __init__.py  main.py
tests/: conftest.py
(+69 files in other folders)
