[tool.uv.workspace]
members = [
    "dotfiles-packages",
    "dotfiles-wallpapers",
    "dotfiles-icon-templates",
]

[tool.uv.sources]
dotfiles-packages = { workspace = true }
dotfiles-wallpapers = { workspace = true }
dotfiles-icon-templates = { workspace = true }

[project]
name = "dotfiles-config"
version = "0.1.0"
description = "Configuration management for dotfiles"
readme = "README.md"
authors = [
    { name = "Juan David", email = "jdavidth.01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.1",
    "dotfiles-packages",
    "dotfiles-wallpapers",
    "dotfiles-icon-templates",
]

[project.scripts]
dotfiles-config = "dotfiles_config:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
