[project]
name = "dotfiles-packages"
version = "0.1.0"
description = "Package management for dotfiles via Ansible"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "PyYAML>=6.0",
]

[project.scripts]
dotfiles-packages = "dotfiles_packages.cli:app"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
