[project]
name = "dotfiles-wallpapers"
version = "0.1.0"
description = "Wallpaper management for dotfiles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
dotfiles-wallpapers = "dotfiles_wallpapers.cli:app"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
